--- a/OurApp/src/index.html
+++ b/OurApp/src/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>OurApp</title>
-  <base href="/">
+    <head>
+        <meta charset="utf-8">
+        <title>GoLamGir</title>
+        <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>
-    loading...
-  </app-root>
-</body>
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        >
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+    </head>
+    <div class="main-idx">
+        <body>
+            <app-root>loading...</app-root>
+        </body>
+    </div>
 </html>
