--- a/OurApp/src/index.html
+++ b/OurApp/src/index.html
@@ -15,9 +15,10 @@
 </head>
     <div class="main-idx">
         <body>
-            <app-root>loading...</app-root>
+            <app-root><div class="loader"></div></app-root>
         </body>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
